sfdx-source/main/default/objects/VCC_Assigned_Site__c/VCC_Assigned_Site__c.object-meta.xml
<CustomObject>
    <description>The Assigned Site is a junction object between Site and Readiness Activity in order to track the Readiness Activity information for each site the SOT User has been
        assigned.</description>
    <label>Assigned Site</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Assigned Site Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>