sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/PIV_Completed__c.field-meta.xml
<CustomField>
    <fullName>PIV_Completed__c</fullName>
    <description>A checkbox that will be checked if the Status of PIV equals &apos;Complete&apos;, for reports.</description>
    <formula>ISPICKVAL(VCC_Status_PIV__c, &apos;Complete&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIV Completed?</label>
    <type>Checkbox</type>
</CustomField>