sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/PN_Completed__c.field-meta.xml
<CustomField>
    <fullName>PN_Completed__c</fullName>
    <description>A checkbox that will be checked if the Status of Progress Note Signing equals &apos;Pass&apos;, for reports.</description>
    <formula>ISPICKVAL(VCC_Status_ProgressNoteSigning__c, &apos;Pass&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PN Completed?</label>
    <type>Checkbox</type>
</CustomField>