sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Assigned_Site__c.field-meta.xml
<CustomField>
    <fullName>VCC_Assigned_Site__c</fullName>
    <description>The flow &apos;VCC SOT Assigned Site Naming&apos; completes this field with the Site, SOT User, and Service from the associated Readiness Activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Site</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>