sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Comment__c.field-meta.xml
<CustomField>
    <fullName>VCC_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>