sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Comment_ProgressNoteSigning__c.field-meta.xml
<CustomField>
    <fullName>VCC_Comment_ProgressNoteSigning__c</fullName>
    <description>Comment field for Progress Note</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>