sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Confirm_Date_PIV__c.field-meta.xml
<CustomField>
    <fullName>VCC_Confirm_Date_PIV__c</fullName>
    <description>Date PIV was confirmed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm Date</label>
    <type>Date</type>
</CustomField>