sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Confirm_Date_ProgressNoteSigning__c.field-meta.xml
<CustomField>
    <fullName>VCC_Confirm_Date_ProgressNoteSigning__c</fullName>
    <description>Date Progress Note Signing was confirmed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm Date</label>
    <type>DateTime</type>
</CustomField>