sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>VCC_Error_Category__c</fullName>
    <description>Picklist for the progress note error category</description>
    <label>Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VCC_SOT_PN_Error_Categories</valueSetName>
    </valueSet>
</CustomField>