sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Service__c.field-meta.xml
<CustomField>
    <fullName>VCC_Service__c</fullName>
    <description>Grabs the Service from the related Readiness Activity. Used in List View filter and VCC SOT Assign All Sites flow.</description>
    <formula>VCC_Readiness_Activity__r.VCC_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service</label>
    <type>Text</type>
</CustomField>