sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Site__c.field-meta.xml
<CustomField>
    <fullName>VCC_Site__c</fullName>
    <description>A picklist field for the Sites for the SOT application</description>
    <label>Site</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VCC_SOT_Sites</valueSetName>
    </valueSet>
</CustomField>