sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>VCC_Site_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>