sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_SOT_User__c.field-meta.xml
<CustomField>
    <fullName>VCC_SOT_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the SOT User for which the Assigned Site is created.</description>
    <label>SOT User</label>
    <referenceTo>VCC_SOT_User__c</referenceTo>
    <relationshipLabel>Assigned Sites</relationshipLabel>
    <relationshipName>Assigned_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>