sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Status_MSOConfig__c.field-meta.xml
<CustomField>
    <fullName>VCC_Status_MSOConfig__c</fullName>
    <description>A picklist for the MSO Config status</description>
    <label>Status (MSO Config)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Waiting for VA</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>Escalate to OIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>