sfdx-source/main/default/objects/VCC_Assigned_Site__c/fields/VCC_Status_ProgressNoteSigning__c.field-meta.xml
<CustomField>
    <fullName>VCC_Status_ProgressNoteSigning__c</fullName>
    <description>A picklist for the Progress Note Signing status</description>
    <label>Status (PN Signing)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>