sfdx-source/main/default/objects/VCC_Assigned_Site__c/recordTypes/VCC_PIV.recordType-meta.xml
<RecordType>
    <fullName>VCC_PIV</fullName>
    <active>false</active>
    <label>PIV</label>
</RecordType>