sfdx-source/main/default/objects/VCC_Assigned_Site__c/recordTypes/VCC_Progress_Note_Signing.recordType-meta.xml
<RecordType>
    <fullName>VCC_Progress_Note_Signing</fullName>
    <active>false</active>
    <label>Progress Note Signing</label>
</RecordType>